# lineage

./: .env.example  .gitignore  .npmrc  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.workspace.ts
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json
apps/desktop/: eslint.config.mjs  package.json
apps/desktop/scripts/: bundle-server.sh
apps/desktop/server-sidecar/: package.json  serve.cjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json
apps/server/src/: index.ts  serve.ts
apps/server/src/__tests__/: completion.test.ts  nodes.test.ts  summarize.test.ts  trees.test.ts
apps/server/src/routes/: completion.ts  nodes.ts  search.ts  summarize.ts  tags.ts  title.ts  trees.ts
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  index.ts  storage.ts
apps/web/src/__tests__/: convertNodes.test.ts  graphUtils.test.ts  linearUtils.test.ts  nodeCardShared.test.ts  settings.test.ts  storage.test.ts  theme.test.ts
apps/web/src/components/: CollapsibleThinking.tsx  ComposeInput.tsx  ContextCard.tsx  GraphRenderer.tsx  InlineEditor.tsx  LinearNodeCard.tsx  Markdown.tsx  Settings.tsx  SiblingNav.tsx  StreamingCard.tsx  TagFilter.tsx  TagManager.tsx  TagPicker.tsx  TagPill.tsx  TopBar.tsx  TreeSelector.tsx
apps/web/src/hooks/: useNodeEditing.ts  useNodeOperations.ts  useSettings.ts  (+4 more)
(+21 files in other folders)
