[package]
name = "lineage-desktop"
version = "0.0.0"
description = "Lineage Desktop — AI-powered conversation tree explorer"
edition = "2021"

[lib]
name = "lineage_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
